--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -6,14 +6,14 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" >
 
     <!-- Title & help -->
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/activity_horizontal_margin" >
 
         <LinearLayout
             android:id="@+id/llHeader"
@@ -167,6 +167,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:orientation="horizontal" >
 
         <TextView
@@ -191,6 +192,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dip"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:background="@android:color/darker_gray" />
 
     <!-- What it is all about -->
@@ -203,9 +205,10 @@
             android:id="@+id/elvRestriction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/activity_horizontal_margin_list"
             android:layout_marginTop="6dip"
             android:choiceMode="none"
-            android:paddingRight="6dip"
+            android:paddingRight="12dip"
             android:scrollbarStyle="insideInset" />
 
         <ScrollView
@@ -213,6 +216,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@id/elvRestriction"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:orientation="vertical"
             android:visibility="gone" >
 
