--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -76,7 +76,7 @@
             android:paddingLeft="6dip" >
 
             <ImageView
-                android:id="@+id/imgCbAsk"
+                android:id="@+id/imgCbRestricted"
                 android:layout_width="32dip"
                 android:layout_height="32dip"
                 android:layout_alignParentRight="true"
@@ -85,16 +85,16 @@
                 android:layout_marginRight="6dip"
                 android:contentDescription="@string/title_restrict"
                 android:visibility="invisible" />
-
-            <ImageView
-                android:id="@+id/imgCbRestricted"
-                android:layout_width="32dip"
-                android:layout_height="32dip"
+ 
+             <TextView
+                android:id="@+id/tvOnDemand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="3dip"
-                android:layout_marginRight="6dip"
-                android:layout_toLeftOf="@+id/imgCbAsk"
-                android:contentDescription="@string/title_restrict"
+                android:text="@string/msg_question"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textStyle="bold"
                 android:visibility="invisible" />
 
             <TextView
