--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -35,34 +35,38 @@
         android:clickable="true"
         android:paddingLeft="6dip" >
 
-        <ImageView
-            android:id="@+id/imgCbMethodAsk"
-            android:layout_width="32dip"
-            android:layout_height="32dip"
+        <LinearLayout
+            android:id="@+id/llName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="3dip"
             android:layout_marginRight="6dip"
-            android:contentDescription="@string/title_restrict"
-            android:visibility="invisible" />
+            android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/imgCbMethodRestricted"
-            android:layout_width="32dip"
-            android:layout_height="32dip"
-            android:layout_toLeftOf="@+id/imgCbMethodAsk"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="3dip"
-            android:layout_marginRight="6dip"
-            android:contentDescription="@string/title_restrict"
-            android:visibility="invisible" />
+            <ImageView
+                android:id="@+id/imgCbMethodRestricted"
+                android:layout_width="32dip"
+                android:layout_height="32dip"
+                android:layout_marginLeft="3dip"
+                android:contentDescription="@string/title_restrict"
+                android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/imgCbMethodAsk"
+                android:layout_width="32dip"
+                android:layout_height="32dip"
+                android:layout_marginLeft="3dip"
+                android:contentDescription="@string/title_restrict"
+                android:visibility="invisible" />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/imgInfo"
             android:layout_width="32dip"
             android:layout_height="32dip"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/imgCbMethodRestricted"
+            android:layout_toLeftOf="@id/llName"
             android:contentDescription="@string/help_application"
             android:src="?attr/icon_info"
             android:visibility="invisible" />
