--- a/res/layout/mainentry.xml
+++ b/res/layout/mainentry.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
@@ -75,27 +76,35 @@
             android:minHeight="?android:attr/listPreferredItemHeightSmall"
             android:paddingLeft="6dip" >
 
-            <ImageView
-                android:id="@+id/imgCbRestricted"
-                android:layout_width="32dip"
-                android:layout_height="32dip"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="3dip"
-                android:layout_marginRight="6dip"
-                android:contentDescription="@string/title_restrict"
-                android:visibility="invisible" />
- 
-             <TextView
-                android:id="@+id/tvOnDemand"
+            <LinearLayout
+                android:id="@+id/llChecks"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:text="@string/msg_question"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textStyle="bold"
-                android:visibility="invisible" />
+                android:orientation="horizontal"
+                tools:ignore="UseCompoundDrawables" >
+
+                <ImageView
+                    android:id="@+id/imgCbRestricted"
+                    android:layout_width="32dip"
+                    android:layout_height="32dip"
+                    android:layout_marginLeft="3dip"
+                    android:layout_marginRight="6dip"
+                    android:contentDescription="@string/title_restrict"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:id="@+id/tvOnDemand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="32dip"
+                    android:layout_marginLeft="3dip"
+                    android:gravity="center_vertical"
+                    android:text="@string/msg_question"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold"
+                    android:visibility="invisible" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvName"
@@ -103,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/imgCbRestricted"
+                android:layout_toLeftOf="@id/llChecks"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
         </RelativeLayout>
     </LinearLayout>
