--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -36,7 +36,7 @@
         android:paddingLeft="6dip" >
 
         <LinearLayout
-            android:id="@+id/llName"
+            android:id="@+id/llChecks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -66,7 +66,7 @@
             android:layout_width="32dip"
             android:layout_height="32dip"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/llName"
+            android:layout_toLeftOf="@id/llChecks"
             android:contentDescription="@string/help_application"
             android:src="?attr/icon_info"
             android:visibility="invisible" />
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/imgInfo"
+            android:layout_toLeftOf="@id/llChecks"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
