--- a/res/layout/restrictionlist.xml
+++ b/res/layout/restrictionlist.xml
@@ -173,8 +173,10 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dip"
+            android:layout_gravity="bottom"
             android:layout_weight="1"
+            android:ellipsize="end"
+            android:singleLine="true"
             android:text="@string/title_restrict"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textIsSelectable="false" />
@@ -183,14 +185,14 @@
             android:id="@+id/swEnable"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dip" />
+            android:layout_gravity="center_vertical" />
 
         <ImageView
             android:id="@+id/imgCbOnDemand"
-            android:layout_width="32dip"
-            android:layout_height="32dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="3dip"
-            android:layout_marginTop="4dip"
             android:contentDescription="@string/title_restrict" />
     </LinearLayout>
 
