--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/llChecks"
+            android:layout_toLeftOf="@id/imgInfo"
             android:textAppearance="?android:attr/textAppearanceSmall" />
     </RelativeLayout>
 
