--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?android:attr/listPreferredItemHeightSmall"
     android:orientation="horizontal"
     android:paddingLeft="24dip" >
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:gravity="center_vertical"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical"
-        android:paddingLeft="6dip" >
+        android:paddingLeft="3dip" >
 
         <ImageView
             android:id="@+id/imgUsed"
@@ -27,58 +28,53 @@
             android:src="?attr/icon_granted" />
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/rlMethodName"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
+    <ImageView
+        android:id="@+id/imgInfo"
+        android:layout_width="32dip"
+        android:layout_height="32dip"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@string/help_application"
+        android:paddingLeft="3dip"
+        android:src="?attr/icon_info"
+        android:visibility="invisible" />
+
+    <LinearLayout
+        android:id="@+id/llMethodName"
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:background="@drawable/list_item_pressed"
         android:clickable="true"
-        android:paddingLeft="6dip" >
-
-        <LinearLayout
-            android:id="@+id/llChecks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="6dip"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/imgCbMethodRestricted"
-                android:layout_width="32dip"
-                android:layout_height="32dip"
-                android:layout_marginLeft="3dip"
-                android:contentDescription="@string/title_restrict"
-                android:visibility="invisible" />
-
-            <ImageView
-                android:id="@+id/imgCbMethodAsk"
-                android:layout_width="32dip"
-                android:layout_height="32dip"
-                android:layout_marginLeft="3dip"
-                android:contentDescription="@string/title_restrict"
-                android:visibility="invisible" />
-        </LinearLayout>
-
-        <ImageView
-            android:id="@+id/imgInfo"
-            android:layout_width="32dip"
-            android:layout_height="32dip"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/llChecks"
-            android:contentDescription="@string/help_application"
-            android:src="?attr/icon_info"
-            android:visibility="invisible" />
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/tvMethodName"
-            android:layout_width="match_parent"
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/imgInfo"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:paddingLeft="6dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            tools:ignore="NestedWeights" />
+
+        <ImageView
+            android:id="@+id/imgCbMethodRestricted"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/title_restrict"
+            android:paddingLeft="3dip"
+            android:visibility="invisible" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgCbMethodAsk"
+        android:layout_width="32dip"
+        android:layout_height="32dip"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@string/title_restrict"
+        android:paddingLeft="3dip"
+        android:visibility="invisible" />
 
 </LinearLayout>
