--- a/res/layout/restrictionentry.xml
+++ b/res/layout/restrictionentry.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="?android:attr/listPreferredItemHeightSmall"
     android:orientation="horizontal" >
 
     <ImageView
@@ -15,9 +16,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:layout_gravity="center_vertical"
         android:orientation="vertical"
-        android:paddingLeft="6dip" >
+        android:paddingLeft="3dip" >
 
         <ImageView
             android:id="@+id/imgUsed"
@@ -40,50 +41,46 @@
         android:layout_height="32dip"
         android:layout_gravity="center_vertical"
         android:contentDescription="@string/help_application"
+        android:paddingLeft="3dip"
         android:src="?attr/icon_info" />
 
-    <RelativeLayout
-        android:id="@+id/rlName"
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/listPreferredItemHeightSmall"
+    <LinearLayout
+        android:id="@+id/llName"
+        android:layout_width="0dip"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:background="@drawable/list_item_pressed"
         android:clickable="true"
-        android:paddingLeft="6dip" >
-
-        <LinearLayout
-            android:id="@+id/llChecks"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="6dip"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/imgCbRestricted"
-                android:layout_width="32dip"
-                android:layout_height="32dip"
-                android:layout_marginLeft="3dip"
-                android:contentDescription="@string/title_restrict"
-                android:visibility="invisible" />
-
-            <ImageView
-                android:id="@+id/imgCbAsk"
-                android:layout_width="32dip"
-                android:layout_height="32dip"
-                android:layout_marginLeft="3dip"
-                android:contentDescription="@string/title_restrict"
-                android:visibility="invisible" />
-        </LinearLayout>
+        android:orientation="horizontal" >
 
         <TextView
             android:id="@+id/tvName"
-            android:layout_width="match_parent"
+            android:layout_width="0dip"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/llChecks"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
-    </RelativeLayout>
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:paddingLeft="6dip"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            tools:ignore="NestedWeights" />
+
+        <ImageView
+            android:id="@+id/imgCbRestricted"
+            android:layout_width="32dip"
+            android:layout_height="32dip"
+            android:layout_gravity="center_vertical"
+            android:contentDescription="@string/title_restrict"
+            android:paddingLeft="3dip"
+            android:visibility="invisible" />
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imgCbAsk"
+        android:layout_width="32dip"
+        android:layout_height="32dip"
+        android:layout_gravity="center_vertical"
+        android:contentDescription="@string/title_restrict"
+        android:paddingLeft="3dip"
+        android:visibility="invisible" />
 
 </LinearLayout>
