--- a/res/layout/restrictionchild.xml
+++ b/res/layout/restrictionchild.xml
@@ -35,7 +35,7 @@
         android:layout_gravity="center_vertical"
         android:contentDescription="@string/help_application"
         android:paddingLeft="3dip"
-        android:src="?attr/icon_info"
+        android:src="?attr/icon_info_book"
         android:visibility="invisible" />
 
     <LinearLayout
