--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -4,6 +4,7 @@
     <attr name="icon_granted" format="reference" />
     <attr name="icon_help" format="reference" />
     <attr name="icon_info" format="reference" />
+    <attr name="icon_info_book" format="reference" />
     <attr name="icon_internet" format="reference" />
     <attr name="icon_used" format="reference" />
     <attr name="icon_used_grayed" format="reference" />
