Improved tutorial/info background
Closes #1391

--- a/res/drawable/tutorial_background_dark.xml
+++ b/res/drawable/tutorial_background_dark.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="#D0008B8B" />
+    <solid android:color="@android:color/background_dark" />
 
     <corners android:radius="10dip" />
 
