--- a/res/layout/templateentry.xml
+++ b/res/layout/templateentry.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin" >
 
     <TextView
         android:id="@+id/tvRestriction"
         android:layout_width="0dip"
-            android:layout_height="?android:attr/listPreferredItemHeightSmall"
-        android:gravity="center_vertical"
+        android:layout_height="?android:attr/listPreferredItemHeightSmall"
         android:layout_weight="1"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </LinearLayout>
