--- a/res/layout/whitelists.xml
+++ b/res/layout/whitelists.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/drawable_background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -18,6 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="6dip"
         android:text="@string/title_check_whitelist"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
@@ -30,8 +30,7 @@
         android:id="@+id/lvWhitelist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dip"
-        android:paddingRight="2dip"
+        android:paddingTop="6dip"
         android:scrollbarStyle="insideInset" />
 
 </LinearLayout>
