--- a/res/layout/ondemand.xml
+++ b/res/layout/ondemand.xml
@@ -129,7 +129,7 @@
         </CheckBox>
 
         <CheckBox
-            android:id="@+id/cbWhitelistFolder"
+            android:id="@+id/cbWhitelistExtra"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone" >
